<resources>
    <string name="app_name">ExploraPlan</string>

    <!-- Strings used for activity label -->
    <string name="registration_activity_label">Registration</string>
    <string name="signin_activity_label">Sign - in</string>

    <!-- Strings used for navigation -->
    <string name="next">Next</string>
    <string name="landingPage1">Get Started</string>
    <string name="landingPage2">Let\'s Explore</string>
    <string name="toForgotPass">Forgot Password?</string>
    <string name="google">Google</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="newAccount">Create new account</string>
    <string name="oldAccount">Already has an account?</string>
    <string name="signIn">Sign - in</string>
    <string name="register">Register</string>
    <string name="signOut">Sign - out</string>
    <string name="cont">Continue</string>

    <!-- Strings used for fragments for text -->

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>

    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="cp">Phone Number</string>
    <string name="bday">Birthday</string>

    <!-- Strings used for fragments for message -->

    <string name="welcome_message">
        Hello\! Welcome to ExploraPlan\!
    </string>

    <string name="signin_welcome">
        Enter your credentials to sign - in\!
    </string>

    <string name="or_signin">
        or sign - in with
    </string>

    <string name="terms">
        By continuing you agree with our Terms and Conditions and Privacy Policy
    </string>

    <string name="or_reg">
        or register with
    </string>

    <string name="added_info">
        You have successfully added the information\!
    </string>

    <string name="deleted_info">
        You have successfully deleted the information\!
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="zelda">Arroceros Forest Park</string>
    <string name="zelda_rate">4.8</string>

    <string name="zelda_description">
        Arroceros Forest Park is a lush, green park in the heart of Manila, often referred to as the "Last Lung of Manila."
    </string>

    <string name="pokemon">Intramuros</string>
    <string name="pokemon_rate">4.6</string>

    <string name="pokemon_description">
        A historic walled city in Manila, known for its Spanish-era landmarks, including Fort Santiago, Manila Cathedral, and San Agustin Church.
    </string>
    <string name="persia">Manila Baywalk</string>
    <string name="persia_rate">4.2</string>

    <string name="persia_description">
       A scenic promenade along Manila Bay, famous for its stunning sunset views and vibrant atmosphere, featuring restaurants, cafes, and street performers.</string>

    <string name="crash">Crash Bandicoot</string>
    <string name="crash_rate">4.5</string>

    <string name="crash_description">
        Crash Bandicoot is a video game franchise originally developed by Naughty Dog as an exclusive for Sony\'s PlayStation console. The series was originally produced by Universal Interactive, which later became known as Vivendi Games. In 2008, Vivendi merged with Activision, which currently owns and publishes the franchise.
        The goal of each level is to guide Crash from the beginning to the end, travelling either into the screen, towards the player or left and right in a side-scrolling manner. Several levels place Crash in unique situations which require the use of motorbikes, jet skis, submarines and various wild animals to complete the level.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>