<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="8dp"
    android:layout_marginBottom="36dp"
    android:background="@color/background_color"
    tools:context=".SigninActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/nameLogo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/exploraplan_crop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/siginMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:letterSpacing="0.1"
            android:padding="8dp"
            android:text="@string/signin_welcome"
            android:textColor="@color/shadow_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLogo" />


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/email"
            android:background="@drawable/text_design"
            android:drawableStart="@drawable/account_circle"
            android:drawablePadding="5dp"
            android:elevation="10dp"
            android:hint="@string/email"
            android:inputType="text"
            android:textColorHint="@color/shadow_color_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/siginMessage" />

        <com.rein.exploraplan.ClickableDrawableEditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="@string/password"
            android:background="@drawable/text_design"
            android:drawableStart="@drawable/lock"
            android:drawableEnd="@drawable/visibility"
            android:drawablePadding="5dp"
            android:elevation="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#803C3633"
            app:layout_constraintEnd_toEndOf="@+id/editEmail"
            app:layout_constraintStart_toStartOf="@+id/editEmail"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <TextView
            android:id="@+id/toForgotPassword_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:letterSpacing="0.1"
            android:padding="16dp"
            android:text="@string/toForgotPass"
            android:textColor="@color/second_color"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editPassword"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/primary_btn"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:letterSpacing="0.1"
            android:text="@string/signIn"
            android:textColor="@color/second_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/editPassword"
            app:layout_constraintStart_toStartOf="@+id/editPassword"
            app:layout_constraintTop_toBottomOf="@+id/toForgotPassword_btn" />

        <TextView
            android:id="@+id/orSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:letterSpacing="0.1"
            android:padding="12dp"
            android:text="@string/or_signin"
            android:textColor="@color/shadow_color"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin_btn" />

        <Button
            android:id="@+id/googlebtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/third_btn"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:letterSpacing="0.1"
            android:text="@string/google"
            android:textColor="@color/shadow_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/editPassword"
            app:layout_constraintStart_toStartOf="@+id/editPassword"
            app:layout_constraintTop_toBottomOf="@+id/orSignin" />

        <ImageView
            android:id="@+id/register_bx"
            android:layout_width="0dp"
            android:layout_height="132dp"
            android:layout_marginTop="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg2"
            app:layout_constraintEnd_toEndOf="@+id/editPassword"
            app:layout_constraintStart_toStartOf="@+id/editPassword"
            app:layout_constraintTop_toBottomOf="@+id/googlebtn"/>

        <TextView
            android:id="@+id/NewExplora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:letterSpacing="0.1"
            android:padding="8dp"
            android:text="New with ExploraPlan?"
            android:textColor="@color/shadow_color"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/register_bx" />

        <TextView
            android:id="@+id/toRegister_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:letterSpacing="0.1"
            android:padding="16dp"
            android:text="@string/newAccount"
            android:textColor="@color/second_color"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NewExplora" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editPassword"
            app:layout_constraintStart_toStartOf="@+id/editPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

